--- a/templates/news/category.html
+++ b/templates/news/category.html
@@ -2,12 +2,12 @@
 {% load i18n %}
 {% load static %}
 
-{% block title %}{% blocktrans %}Texnalogiya{% endblocktrans %}{% endblock title %}
+{% block title %}NewsNest{% endblock title %}
 
 
 {% block content %}
     <section id="contentSection">
-    {% for news in technology_news %}
+    {% for news in category_news %}
 
             <div class="row">
                 <div class="col-sm-8">
