--- a/templates/news/index.html
+++ b/templates/news/index.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-    {% blocktrans %}Bosh sahifa{% endblocktrans %}
+    {% blocktranslate %}Bosh sahifa{% endblocktranslate %}
 {% endblock title %}
 
 
@@ -19,7 +19,6 @@
                             <div class="slider_article">
                                 <h2><a class="slider_tittle" href="{{ news.get_absolute_url }}">{{ news.title }}</a>
                                 </h2>
-                                <p>{{ news.body | truncatewords:25 }}</p>
                             </div>
                         </div>
                     {% endfor %}
@@ -54,7 +53,7 @@
             <div class="col-lg-8 col-md-8 col-sm-8">
                 <div class="left_content">
                     <div class="single_post_content">
-                        <h2><span>{% blocktrans %}Biznes{% endblocktrans %}</span></h2>
+                        <h2><span>{% blocktrans %}Iqtisodiyot{% endblocktrans %}</span></h2>
                         <div class="single_post_content_left">
                             <ul class="business_catgnav  wow fadeInDown">
                                 {% for business in business_news %}
@@ -78,16 +77,16 @@
                             <ul class="spost_nav">
                                 {% for business in business_news %}
                                     {% if forloop.counter > 1 %}
-                                    <li>
-                                        <div class="media wow fadeInDown"><a href="{{ business.get_absolute_url }}"
-                                                                             class="media-left"> <img alt=""
-                                                                                                      src="{{ business.image.url }}">
-                                        </a>
-                                            <div class="media-body"><a href="{{ business.get_absolute_url }}"
-                                                                       class="catg_title">
-                                                {{ business.title }}</a></div>
-                                        </div>
-                                    </li>
+                                        <li>
+                                            <div class="media wow fadeInDown"><a href="{{ business.get_absolute_url }}"
+                                                                                 class="media-left"> <img alt=""
+                                                                                                          src="{{ business.image.url }}">
+                                            </a>
+                                                <div class="media-body"><a href="{{ business.get_absolute_url }}"
+                                                                           class="catg_title">
+                                                    {{ business.title }}</a></div>
+                                            </div>
+                                        </li>
                                     {% endif %}
                                 {% endfor %}
                             </ul>
@@ -100,30 +99,35 @@
                                 <ul class="business_catgnav wow fadeInDown">
                                     {% for foreign in foreign_news %}
                                         {% if forloop.first %}
-                                    <li>
-                                        <figure class="bsbig_fig"><a href="{{ foreign.get_absolute_url }}" class="featured_img">
-                                            <img alt="" src="{{ foreign.image.url }}"> <span
-                                                class="overlay"></span>
-                                        </a>
-                                            <figcaption><a href="{{ foreign.get_absolute_url }}">{{ foreign.title }}</a></figcaption>
-                                            <p>{{ foreign.body | truncatewords:10 }}</p>
-                                        </figure>
-                                    </li>
+                                            <li>
+                                                <figure class="bsbig_fig"><a href="{{ foreign.get_absolute_url }}"
+                                                                             class="featured_img">
+                                                    <img alt="" src="{{ foreign.image.url }}"> <span
+                                                        class="overlay"></span>
+                                                </a>
+                                                    <figcaption><a
+                                                            href="{{ foreign.get_absolute_url }}">{{ foreign.title }}</a>
+                                                    </figcaption>
+                                                    <p>{{ foreign.body | truncatewords:10 }}</p>
+                                                </figure>
+                                            </li>
                                         {% endif %}
                                     {% endfor %}
                                 </ul>
                                 <ul class="spost_nav">
                                     {% for foreign in foreign_news %}
                                         {% if forloop.counter > 1 %}
-                                    <li>
-                                        <div class="media wow fadeInDown"><a href="{{ foreign.get_absolute_url }}"
-                                                                             class="media-left"> <img alt=""
-                                                                                                      src="{{ foreign.image.url }}">
-                                        </a>
-                                            <div class="media-body"><a href="{{ foreign.get_absolute_url }}" class="catg_title">
-                                                {{ foreign.title }}</a></div>
-                                        </div>
-                                    </li>
+                                            <li>
+                                                <div class="media wow fadeInDown"><a
+                                                        href="{{ foreign.get_absolute_url }}"
+                                                        class="media-left"> <img alt=""
+                                                                                 src="{{ foreign.image.url }}">
+                                                </a>
+                                                    <div class="media-body"><a href="{{ foreign.get_absolute_url }}"
+                                                                               class="catg_title">
+                                                        {{ foreign.title }}</a></div>
+                                                </div>
+                                            </li>
                                         {% endif %}
                                     {% endfor %}
                                 </ul>
@@ -135,33 +139,37 @@
                                 <ul class="business_catgnav">
                                     {% for technology in technology_news %}
                                         {% if forloop.first %}
-                                    <li>
-                                        <figure class="bsbig_fig wow fadeInDown"><a href="{{ technology.get_absolute_url }}"
-                                                                                    class="featured_img"> <img alt=""
-                                                                                                               src="{{ technology.image.url }}">
-                                            <span class="overlay"></span> </a>
-                                            <figcaption><a href="{{ technology.get_absolute_url }}">{{ technology.title }}</a></figcaption>
-                                            <p>{{ technology.body | truncatewords:10 }}</p>
-                                        </figure>
-                                    </li>
+                                            <li>
+                                                <figure class="bsbig_fig wow fadeInDown"><a
+                                                        href="{{ technology.get_absolute_url }}"
+                                                        class="featured_img"> <img alt=""
+                                                                                   src="{{ technology.image.url }}">
+                                                    <span class="overlay"></span> </a>
+                                                    <figcaption><a
+                                                            href="{{ technology.get_absolute_url }}">{{ technology.title }}</a>
+                                                    </figcaption>
+                                                    <p>{{ technology.body | truncatewords:10 }}</p>
+                                                </figure>
+                                            </li>
                                         {% endif %}
                                     {% endfor %}
                                 </ul>
                                 <ul class="spost_nav">
                                     {% for technology in technology_news %}
                                         {% if forloop.counter > 1 %}
-                                    <li>
-                                        <div class="media wow fadeInDown"><a href="{{ technology.get_absolute_url }}"
-                                                                             class="media-left"> <img alt=""
-                                                                                                      src="{{ technology.image.url }}">
-                                        </a>
-                                            <div class="media-body"><a href="{{ technology.get_absolute_url }}" class="catg_title">
-                                                {{ technology.title }}</a></div>
-                                        </div>
-                                    </li>
+                                            <li>
+                                                <div class="media wow fadeInDown"><a
+                                                        href="{{ technology.get_absolute_url }}"
+                                                        class="media-left"> <img alt=""
+                                                                                 src="{{ technology.image.url }}">
+                                                </a>
+                                                    <div class="media-body"><a href="{{ technology.get_absolute_url }}"
+                                                                               class="catg_title">
+                                                        {{ technology.title }}</a></div>
+                                                </div>
+                                            </li>
                                         {% endif %}
                                     {% endfor %}
-                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -231,15 +239,17 @@
                             <ul class="business_catgnav">
                                 {% for sport in sport_news %}
                                     {% if forloop.first %}
-                                <li>
-                                    <figure class="bsbig_fig  wow fadeInDown"><a class="featured_img"
-                                                                                 href="{{ sport.get_absolute_url }}"> <img
-                                            src="{{ sport.image.url }}" class="sport-image" alt=""> <span
-                                            class="overlay"></span> </a>
-                                        <figcaption><a href="{{ sport.get_absolute_url }}">{{ sport.title }}</a></figcaption>
-                                        <p>{{ sport.body | truncatewords:10 }}</p>
-                                    </figure>
-                                </li>
+                                        <li>
+                                            <figure class="bsbig_fig  wow fadeInDown"><a class="featured_img"
+                                                                                         href="{{ sport.get_absolute_url }}">
+                                                <img
+                                                        src="{{ sport.image.url }}" class="sport-image" alt=""> <span
+                                                    class="overlay"></span> </a>
+                                                <figcaption><a href="{{ sport.get_absolute_url }}">{{ sport.title }}</a>
+                                                </figcaption>
+                                                <p>{{ sport.body | truncatewords:10 }}</p>
+                                            </figure>
+                                        </li>
                                     {% endif %}
                                 {% endfor %}
                             </ul>
@@ -248,15 +258,16 @@
                             <ul class="spost_nav">
                                 {% for sport in sport_news %}
                                     {% if forloop.counter > 1 %}
-                                <li>
-                                    <div class="media wow fadeInDown"><a href="{{ sport.get_absolute_url }}"
-                                                                         class="media-left"> <img alt=""
-                                                                                                  src="{{ sport.image.url }}">
-                                    </a>
-                                        <div class="media-body"><a href="{{ sport.get_absolute_url }}" class="catg_title">
-                                            {{ sport.title }}</a></div>
-                                    </div>
-                                </li>
+                                        <li>
+                                            <div class="media wow fadeInDown"><a href="{{ sport.get_absolute_url }}"
+                                                                                 class="media-left"> <img alt=""
+                                                                                                          src="{{ sport.image.url }}">
+                                            </a>
+                                                <div class="media-body"><a href="{{ sport.get_absolute_url }}"
+                                                                           class="catg_title">
+                                                    {{ sport.title }}</a></div>
+                                            </div>
+                                        </li>
                                     {% endif %}
                                 {% endfor %}
                             </ul>
@@ -311,9 +322,11 @@
                         <div class="tab-content">
                             <div role="tabpanel" class="tab-pane active" id="category">
                                 <ul>
-                                    {% for category in categories %}
-                                        <li class="cat-item"><a href="{{ category.name.lower }}/">{{ category.name }}</a></li>
-                                    {% endfor %}
+                                    <li class="cat-item"><a href="{% url 'local_news_page' %}">Mahalliy</a></li>
+                                    <li class="cat-item"><a href="{% url 'foreign_news_page' %}">Xorij</a></li>
+                                    <li class="cat-item"><a href="{% url 'technology_news_page' %}">Texnalogiya</a></li>
+                                    <li class="cat-item"><a href="{% url 'sport_news_page' %}">Sport</a></li>
+                                    <li class="cat-item"><a href="{% url 'economy_news_page' %}">Iqtisodiyot</a></li>
                                 </ul>
                             </div>
                             <div role="tabpanel" class="tab-pane" id="video">
