--- a/templates/news/base.html
+++ b/templates/news/base.html
@@ -9,6 +9,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="Yangiliklar, newsnest, newsnest.uz, Ozbekistondagi yangilikar, xabarlar, eng so‘nggi yangiliklar">
+    <link rel="icon" href="{% static 'images/i-removebg.png' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/animate.css' %}">
@@ -18,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/jquery.fancybox.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/theme.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/comment.css' %}">
 
 </head>
 <body>
@@ -34,7 +37,8 @@
                         <ul class="top_nav">
                             <li><a href="{% url 'home_page' %}">{% blocktrans %}Bosh sahifa{% endblocktrans %}</a></li>
                             <li><a href="#">{% blocktrans %}Biz haqimizda{% endblocktrans %}</a></li>
-                            <li><a href="{% url 'contact_page' %}">{% blocktrans %}Biz bilan aloqa{% endblocktrans %}</a></li>
+                            <li><a href="{% url 'contact_page' %}">{% blocktrans %}Biz bilan
+                                aloqa{% endblocktrans %}</a></li>
                             <li>
                                 <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
                                     <input name="next" type="hidden" value="{{ redirect_to }}">
@@ -43,11 +47,13 @@
                                         {% get_available_languages as LANGUAGES %}
                                         {% get_language_info_list for LANGUAGES as languages %}
                                         {% for language in languages %}
-                                            <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %}
+                                            <option onsubmit="true" value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %}
                                                     selected{% endif %}>
                                                 {{ language.name_local }} ({{ language.code }})
                                             </option>
                                         {% endfor %}
+
+
                                     </select>
                                     <input type="submit" value="Go">
                                 </form>
@@ -68,10 +74,10 @@
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="header_bottom">
                     <div class="logo_area"><a href="{% url 'home_page' %}" class="logo"><img
-                            src="{% static 'images/logo.jpg' %}"
+                            src="{% static 'images/logo2.png' %}"
                             alt=""></a>
                     </div>
-                    <div class="add_banner"><a href="http://t.me/vepsace_muzik"><img
+                    <div class="add_banner"><a href=""><img
                             src="{% static 'images/addbanner_728x90_V1.jpg' %}" alt=""></a>
                     </div>
                 </div>
@@ -103,15 +109,18 @@
                     {#                        </ul>#}
                     {#                    </li>#}
                     <li><a href="{% url 'foreign_news_page' %}">{% blocktrans %}Xorij{% endblocktrans %}</a></li>
-                    <li><a href="{% url 'technology_news_page' %}">{% blocktrans %}Texnalogiya{% endblocktrans %}</a></li>
+                    <li><a href="{% url 'technology_news_page' %}">{% blocktrans %}Texnalogiya{% endblocktrans %}</a>
+                    </li>
                     <li><a href="{% url 'sport_news_page' %}">{% blocktrans %}Sport{% endblocktrans %}</a></li>
-                    <li><a href="{% url 'contact_page' %}">{% blocktrans %}Biz bilan aloqa{% endblocktrans %}</a></li>
-                    <li><a href="">{% blocktrans %}404 Page{% endblocktrans %}</a></li>
+                    <li><a href="{% url 'economy_news_page' %}">{% blocktrans %}Iqtisodiyot{% endblocktrans %}</a></li>
+{#                    <li><a href="{% url 'contact_page' %}">{% blocktrans %}Biz bilan aloqa{% endblocktrans %}</a></li>#}
+{#                    <li><a href="">{% blocktrans %}404 Page{% endblocktrans %}</a></li>#}
 
                     <li>
                         <div>
                             <form action="{% url 'search_result' %}" method="get">
-                                <input type="search" name="q" placeholder="{% blocktrans %}qidiruv{% endblocktrans %}" class="form-control">
+                                <input style="background: transparent; outline: none; margin-top: 7px" type="search" name="q" placeholder="{% blocktrans %}qidiruv{% endblocktrans %}"
+                                       class="form-control">
                             </form>
                         </div>
                     </li>
